--- a/Index.html
+++ b/Index.html
@@ -8,9 +8,9 @@
 	<body>
 		<ul>
 			<li>Vagrant</li>
-			<li>Docker</li>
+			<li>Docker: Criando containers sem dor de cabeça</li>
 			<li>Ansible</li>
-			<li>Integração Contínua: Curso completo</li>
+			<li>Integração Contínua: Maturidade e Produtividade no Desenvolvimento de Software</li>
 		</ul>
 	</body>
 </html>
