--- a/Index.html
+++ b/Index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Lista de Cursos de DevOps da AlurA</title>
+		<title>Lista de Cursos de DEVOps da Alura</title>
 	</head>
 	
 	<body>
